Try to fix font issue on mobile (4th attempt)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,8 @@
     @apply bg-black text-xl lg:text-2xl;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: subpixel-antialiased;
+    /* -webkit-text-stroke: 1px transparent; */
   }
 }
 
